# trs

./: pyproject.toml
src/trs/: main.py  script.t  testing_classes.py
