[project]
name = "trs"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sven Hendrikx", email = "sven_hendrikx@hotmail.com"},
]
dependencies = [
    "rich>=13.7.1",
    "ipdb>=0.13.13",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
